<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/backgorund"
    android:layoutDirection="ltr"
    app:cardCornerRadius="15dp"
    app:cardElevation="2dp">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/backgorund"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txv_frg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="Title"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/img_frg_flag"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/backgorund"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv_frg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="start"
                    android:text="USD"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/txv_frg_coountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="start"
                    android:text="USA"
                    android:textColor="@color/text_color"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txv_frg_rate_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="end"
                    android:layout_gravity="end"
                    android:text="Rate to Euro"
                    android:textColor="@color/text_color"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/txv_frg_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="sans-serif-light"
                    android:gravity="end"
                    android:text="33.88"
                    android:textColor="@color/text_color"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>



        <TextView
            android:id="@+id/txv_frg_Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="0"
            android:layout_marginBottom="0dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/text_color"
            android:textSize="26sp" />
        <TextView
            android:id="@+id/txv_frg_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text=""
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/text_color"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_frg_currency"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:gravity="start"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/amount"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLength="10"
                app:backgroundTint="@color/main_list_bg"
                android:maxLines="1"
                android:minLines="1"
                android:singleLine="false"
                android:text=""
                android:textColor="@color/main_list_bg"
                android:textColorHint="@color/grey05"
                android:textSize="12sp" />

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/spinner_frg_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backgorund"
                android:gravity="center"
                android:layout_gravity="center"
                android:hint="Currency"
                android:padding="10dp"
                android:textColor="@color/main_list_bg"
                android:textColorHint="@color/main_list_bg"
                android:textSize="14.5sp"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_padding="8dp"
                app:spinner_divider_color="@color/main_list_bg"
                app:spinner_divider_show="true"
                app:spinner_divider_size="0.1dp"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_background="@color/backgorund"
                app:spinner_popup_elevation="14dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txv_frg_cancel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/backgorund"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/cancel"
                android:textColor="@color/text_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txv_frg_submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/accounting_green"
                android:gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
